tests/dataset/tpc-ds/compiler/erlang/q72.error
run: exit status 127
escript: exception error: bad key: cs_promo_sk
  in function  map_get/2
     called as map_get(cs_promo_sk,
                       #{cd => #{cd_demo_sk => 1,cd_marital_status => "M"},
                         hd =>
                             #{hd_demo_sk => 1,
                               hd_buy_potential => "5001-10000"},
                         i => #{i_item_sk => 1,i_item_desc => "ItemA"},
                         w =>
                             #{w_warehouse_sk => 1,w_warehouse_name => "Main"},
                         cs =>
                             #{cs_item_sk => 1,cs_order_number => 1,
                               cs_quantity => 1,cs_sold_date_sk => 1,
                               cs_ship_date_sk => 3,cs_bill_cdemo_sk => 1,
                               cs_bill_hdemo_sk => 1,cs_promo_sk => undefined},
                         inv =>
                             #{inv_item_sk => 1,inv_warehouse_sk => 1,
                               inv_date_sk => 2,inv_quantity_on_hand => 0},
                         d1 =>
                             #{d_date_sk => 1,d_week_seq => 10,d_date => 1,
                               d_year => 2000},
                         d2 =>
                             #{d_date_sk => 2,d_week_seq => 10,d_date => 1,
                               d_year => 2000},
                         d3 =>
                             #{d_date_sk => 3,d_week_seq => 10,d_date => 7,
                               d_year => 2000}})
     *** argument 1: not present in map
  in call from q72_erl__escript__1752__555528__82651__8965:'-main/1-lc$^11/1-1-'/1 (/tmp/q72.erl, line 13)
  in call from q72_erl__escript__1752__555528__82651__8965:'-main/1-lc$^10/1-0-'/1 (/tmp/q72.erl, line 13)
  in call from q72_erl__escript__1752__555528__82651__8965:main/1 (/tmp/q72.erl, line 13)
  in call from escript:run/2 (escript.erl, line 904)
  in call from escript:start/1 (escript.erl, line 418)
  in call from init:start_it/1 
  in call from init:start_em/1 
